--- a/app/todo-app/public/templates/navbar.html
+++ b/app/todo-app/public/templates/navbar.html
@@ -1,6 +1,6 @@
 <nav>
 	<ul>
 		<li><a href="/">Home</a></li>
-		<li><a href="http://teamtreehouse.com">Treehouse</a></li>
+		<li><a href="https://codelouisville.slack.com">Slack Code Louisville</a></li>
 	</ul>
 </nav>
