--- a/app/todo-app/public/templates/navbar.html
+++ b/app/todo-app/public/templates/navbar.html
@@ -1,6 +1,7 @@
 <nav>
 	<ul>
-		<li><a href= "..app/home-nav-page/index.html" target="_blank">Home</a></li>
+		<!-- Home button not working between localhost site and html directory -->
+		<!-- <li><a href="file:///C:/Users/jvara/FSJS_Final_Project/final-project-fsjs/app/home-nav-page/index.html" target="_blank">Home</a></li> -->
 		<li><a href= "https://codelouisville.slack.com" target="blank">Slack Code Louisville</a></li>
 	</ul>
 </nav>
